# matrix2json

./: CMakeLists.txt  README.md
R/: jsonlite.R  rjson.R  rjsonio.R
cpp/: arma.cpp  arma_test.cpp  eigen.cpp  eigen_test.cpp
julia/: json_test.jl
python/: numpy_full_benchmark.py  numpy_test.py  pandas_full_benchmark.py  pandas_test.py  pymrio_test.py  requirements.txt  scipy_sparse_test.py
